Fixed broken css

--- a/src/main/resources/static/css/app.css
+++ b/src/main/resources/static/css/app.css
@@ -203,6 +203,6 @@ div.text {
     background-color:green;
 }
 
-#mark-all-as-read-button {
-    float:left;
+.inf-scroll {
+    margin-top:41px;
 }
